applying TA comments